--- a/index.html
+++ b/index.html
@@ -199,7 +199,12 @@
         <div id="br"><a href="">Best Offer</a></div>
         <h2>Click Below to Discover the Indian Diabetes Silencer Helping Thousands of Nigerians Become Diabetes FREE For Life!</h2>
         <img src="./asset/6.png" alt="Doctor Image">
-        <button>Show Me Pls!</button>
+        <a href="./salespage/">
+            <button>Show Me Pls!</button>
+
+          </a>
+
+        </a>
       </div>
     </div> 
    
