--- a/salespage/index.html
+++ b/salespage/index.html
@@ -175,7 +175,9 @@
             </div>
             
             <div id="scr">
-                <button class="btn">Secure Mine Please!</button>
+                <a href="/order-page/">
+                    <button class="btn">Secure Mine Please!</button>
+                </a>
                 <p>You missed out!</p>
             </div>
         </div>
@@ -215,7 +217,10 @@
         </section>
 
         <div id="scr">
-            <button class="btn">Secure Mine Please!</button>
+            <a href="/order-page/">
+                <button class="btn">Secure Mine Please!</button>
+
+            </a>
         </div>
 
 
@@ -237,7 +242,10 @@
                 <p>The Solution?</p>
 
                 <div id="scr">
-                    <button class="btn">Secure Mine Please!</button>
+                    <a href="/order-page/">
+                        <button class="btn">Secure Mine Please!</button>
+
+                    </a>
                 </div>
     
         </div>
@@ -250,7 +258,10 @@
         </div>
 
         <div id="scr">
-            <button class="btn">Secure Mine Please!</button>
+            <a href="">
+                <button class="btn">Secure Mine Please!</button>
+
+            </a>
             <p>You missed out!</p>
         </div>
 
@@ -406,7 +417,10 @@
                     <div class="delivery">
                         <i class="fas fa-truck"></i> FREE DELIVERY
                     </div>
-                    <button class="select-order">Select Order</button>
+                    <a href="/order-page/">
+                        <button class="select-order">Select Order</button>
+
+                    </a>
                 </div>
 
 
@@ -425,7 +439,10 @@
                     <div class="delivery">
                         <i class="fas fa-truck"></i> FREE DELIVERY
                     </div>
-                    <button class="select-order">Select Order</button>
+                    <a href="/order-page/">
+                        <button class="select-order">Select Order</button>
+
+                    </a>
                 </div>
 
 
@@ -444,7 +461,10 @@
                     <div class="delivery">
                         <i class="fas fa-truck"></i> FREE DELIVERY
                     </div>
-                    <button class="select-order">Select Order</button>
+                    <a href="/order-page/">
+                        <button class="select-order">Select Order</button>
+
+                    </a>
                 </div>
             </div>
 
