--- a/salespage/index.html
+++ b/salespage/index.html
@@ -175,7 +175,7 @@
             </div>
             
             <div id="scr">
-                <a href="/order-page/index.html">
+                <a href="/orderpage/">
                     <button class="btn">Secure Mine Please!</button>
                 </a>
                 <p>You missed out!</p>
@@ -258,7 +258,7 @@
         </div>
 
         <div id="scr">
-            <a href="">
+            <a href="/order-page/index.html">
                 <button class="btn">Secure Mine Please!</button>
 
             </a>
