--- a/upsell/index.html
+++ b/upsell/index.html
@@ -83,7 +83,10 @@
         <p class="dl">One Time Deal: &#8358;35,000</p>
 
         <div id="btn">
+          <a href="../orderpage/">
             <button>Add it please!</button>
+
+          </a>
         </div>
 
         <h1>We GUARANTEE You’ll Get Hard for the 2nd Round and Even Third Round After Round 1.
