--- a/salespage/index.html
+++ b/salespage/index.html
@@ -175,7 +175,7 @@
             </div>
             
             <div id="scr">
-                <a href="../orderpage/">
+                <a href="../order-page/">
                     <button class="btn">Secure Mine Please!</button>
                 </a>
                 <p>You missed out!</p>
@@ -217,7 +217,7 @@
         </section>
 
         <div id="scr">
-            <a href="../orderpage/">
+            <a href="../order-page/">
                 <button class="btn">Secure Mine Please!</button>
 
             </a>
@@ -242,7 +242,7 @@
                 <p>The Solution?</p>
 
                 <div id="scr">
-                    <a href="../orderpage/">
+                    <a href="../order-page/">
                         <button class="btn">Secure Mine Please!</button>
 
                     </a>
@@ -258,7 +258,7 @@
         </div>
 
         <div id="scr">
-            <a href="../orderpage/">
+            <a href="../order-page/">
                 <button class="btn">Secure Mine Please!</button>
 
             </a>
@@ -417,7 +417,7 @@
                     <div class="delivery">
                         <i class="fas fa-truck"></i> FREE DELIVERY
                     </div>
-                    <a href="../orderpage/">
+                    <a href="../order-page/">
                         <button class="select-order">Select Order</button>
 
                     </a>
@@ -439,7 +439,7 @@
                     <div class="delivery">
                         <i class="fas fa-truck"></i> FREE DELIVERY
                     </div>
-                    <a href="../orderpage/">
+                    <a href="../order-page/">
                         <button class="select-order">Select Order</button>
 
                     </a>
@@ -461,7 +461,7 @@
                     <div class="delivery">
                         <i class="fas fa-truck"></i> FREE DELIVERY
                     </div>
-                    <a href="../orderpage/">
+                    <a href="../order-page/">
                         <button class="select-order">Select Order</button>
 
                     </a>
