--- a/upsell/index.html
+++ b/upsell/index.html
@@ -83,7 +83,7 @@
         <p class="dl">One Time Deal: &#8358;35,000</p>
 
         <div id="btn">
-          <a href="../orderpage/">
+          <a href="../order-page/">
             <button>Add it please!</button>
 
           </a>
