--- a/salespage/index.html
+++ b/salespage/index.html
@@ -405,8 +405,8 @@
             <img src="./asset/a4.webp" alt=""><br>
 
 
-            <div id="cntr">
-                <div class="offer">
+            <div class="product-container">
+                <div class="product">
                     <h2>1 Bottle</h2>
                     <p>14 Days Serving..</p>
                     <img src="./asset/a5.png" alt="1 Bottle">
@@ -414,55 +414,43 @@
                         <h3>₦35,000</h3>
                         <p class="old-price">Old Price: 70,000</p>
                     </div>
-                    <div class="delivery">
-                        <i class="fas fa-truck"></i> FREE DELIVERY
-                    </div>
+                    <p class="free-delivery">
+                        <i class="fa fa-truck"></i> FREE DELIVERY
+                    </p>
                     <a href="../order-page/">
-                        <button class="select-order">Select Order</button>
+                        <button>Select Order</button>
 
                     </a>
                 </div>
-
-
-                <div class="offer">
+                <div class="product">
                     <h2>2 Bottles Get 1 FREE</h2>
                     <p>14 Days Serving..</p>
-                    <div class="bottles">
-                        <img src="./asset/a6.png" alt="2 Bottles">
-                        <!-- <span class="plus">+</span>
-                        <img src="your-image-source" alt="1 Free Bottle"> -->
-                    </div>
+                    <img src="./asset/a6.png" alt="2 Bottles Get 1 FREE">
                     <div class="price">
                         <h3>₦75,000</h3>
                         <p class="old-price">Old Price: 150,000</p>
                     </div>
-                    <div class="delivery">
-                        <i class="fas fa-truck"></i> FREE DELIVERY
-                    </div>
+                    <p class="free-delivery">
+                        <i class="fa fa-truck"></i> FREE DELIVERY
+                    </p>
                     <a href="../order-page/">
-                        <button class="select-order">Select Order</button>
+                        <button>Select Order</button>
 
                     </a>
                 </div>
-
-
-                <div class="offer">
-                    <h2>Buy 4 Bottles Get 2 FREE</h2>
+                <div class="product">
+                    <h2>Buy 4 Bottle Get 2 FREE</h2>
                     <p>14 Days Serving..</p>
-                    <div class="bottles">
-                        <img src="./asset/a7.png" alt="4 Bottles">
-                        <!-- <span class="plus">+</span>
-                        <img src="your-image-source" alt="2 Free Bottles"> -->
-                    </div>
+                    <img src="./asset/a7.png" alt="Buy 4 Bottle Get 2 FREE">
                     <div class="price">
                         <h3>₦95,000</h3>
                         <p class="old-price">Old Price: 190,000</p>
                     </div>
-                    <div class="delivery">
-                        <i class="fas fa-truck"></i> FREE DELIVERY
-                    </div>
+                    <p class="free-delivery">
+                        <i class="fa fa-truck"></i> FREE DELIVERY
+                    </p>
                     <a href="../order-page/">
-                        <button class="select-order">Select Order</button>
+                        <button>Select Order</button>
 
                     </a>
                 </div>
