--- a/upsell/index.html
+++ b/upsell/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="./cs/style.css">
-  <title>Responsive Landing Page</title>
+  <title>Upsell - Page</title>
  
 </head>
 <body>
