--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
         <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
       </div>
 
-      <img src="./asset/1.jpg" alt="Responsive Image">
+      <img src="./asset/1.jpg" alt="">
       <p>When I was diagnosed with type-2 diabetes, I felt my life was over.
       </p>
       <p>I couldn’t enjoy the sweet foods I loved. I couldn’t walk without sweating like a Christmas goat.</p>
       <p>My blood sugar level was as high as 9.7. It was that bad.</p>
     </div>
     <h1>It Was So Bad It Even Affected My Bedroom Performance...</h1>
-    <img src="./asset/2.jpg" alt="Responsive Image">
+    <img src="./asset/2.jpg" alt="">
 
     <p>Just 2 minutes and everything goes soft.</p>
     <p>This poor performance affected my marriage in ways I can't even explain.</p>
     <p>My wife was always nagging and angry.</p>
     <h1>My Home Felt Like Hell...</h1>
     
-    <img src="./asset/3.jpg" alt="Responsive Image">
+    <img src="./asset/3.jpg" alt="">
     <p>The high cost of insulin and hospital treatments for my diabetes made me so broke I couldn't fulfill my family responsibilities.</p>
     <p>I couldn’t pay my kids' school fees or enjoy basic things in life.</p>
     <p>It was depressing.</p>
@@ -90,11 +90,11 @@
 
     </i></b></p>
 
-    <img src="./asset/4.png" alt="Responsive Image">
+    <img src="./asset/4.png" alt="">
     <p>And This…
 
     </p>
-    <img src="./asset/5.png" alt="Responsive Image">
+    <img src="./asset/5.png" alt="">
    <h1>Then I Decided to Stop Unregulated Herbs...</h1>
     <p>Dear friend, if you’re trying to manage diabetes, be it type 1 or type 2, your diabetes can get so bad that the hospital will become your second home.
 
@@ -135,11 +135,11 @@
     </p>
     <p>He told me of a man who lost his life due to kidney failure from taking unregulated mixture
     </p>
-    <img src="./asset/7.png" alt="Responsive Image">
+    <img src="./asset/7.png" alt="">
     <h1>Finally, Dr. Akin Revealed the Secret...
 
     </h1>
-    <img src="./asset/8.png" alt="Responsive Image">
+    <img src="./asset/8.png" alt="">
     <p>He discovered a solution from the Bishnoi tribe in India known for exceptional health and longevity.
 
 
@@ -182,7 +182,7 @@
     <h1>Don’t Let Diabetes Ruin Your Life...
 
     </h1>
-        <img src="./asset/9.png" alt="Responsive Image">
+        <img src="./asset/9.png" alt="">
     <p>I don’t know what kind of symptoms you’re dealing with, but I know the stress and side effects of high blood sugar are hellish.
 
     </p>
