--- a/order-page/index.html
+++ b/order-page/index.html
@@ -24,8 +24,14 @@
         <h1 id="ud">"Then Fill The Form Below To Immediately PLACE Your ORDER Now!"</h1>
     </div>
 
-    <a href="../upsell/">JUSTING TESTING THE upsell</a>
+    <!-- SNIPER CRM CODE  -->
 
+    <div>
+        <div class="myiframe"><iframe id="iFrame30" class="iframe" src="https://app.snipercrm.io/formframe?formid=6067f6dd75423&amp;c=0" frameborder="0" scrolling="no" width="100%" name="snipercrmform"></iframe></div><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><script type="text/javascript" src="https://app.snipercrm.io/js/iframeResizer.min.js"></script><script type="text/javascript" src="https://app.snipercrm.io/js/iframeResizerFix.min.js"></script><script type="text/javascript">document.getElementById("iFrame30").addEventListener("load", function() {var iframeWindow = this.contentWindow;var parentUrl = window.location.href;iframeWindow.postMessage({ parentUrl: parentUrl }, "*");});</script>
+    </div>
+
+
+    <!-- SNIPER CRM CODE -->
 
     <footer>
         <p>This Site Is Not A Part Of The Facebook Website (Facebook Inc.) Or Google Search (Google Inc.) Additionally, This Site Is Not Endorsed By Facebook/Google In Any Way. FACEBOOK Is A Trademark Of FACEBOOK, Inc. and GOOGLE SEARCH Is A Trademark Of GOOGLE, Inc.</p>
