--- a/order-page/index.html
+++ b/order-page/index.html
@@ -13,13 +13,24 @@
         <img src="./asset/2.jpeg" alt="Product Image" id="rm">
         <p><i>Don't Order If...</i></p>
         <ul id="bs">
-            <li><i class="fa fa-check"></i><b>You are not ready to Collect the product within 1-3 days From Today.</b></li>
-            <li><i class="fa fa-check"></i> You don’t understand what you just Read about BCG Indian Diabetes Silencer. </li>
-            <li><i class="fa fa-check"></i><b>You've Not Made up Your Mind to Get Rid of The Deadly Diabetes Yet.</b></li>
-            <li><i class="fa fa-check"></i>You are not financially ready because it Cost Us A LOT to Run Adverts and Process delivery (which is free for you).</li>
-            <li><i class="fa fa-check"></i><b>You don’t pick unknown numbers As Our representative Will Call to confirm your order and schedule a delivery date So We Need you to pick up and respond.</b></li>
+        
+            <li>You are ready to receive the product within 1-3 days of order</li>
+            <li>You understand what you just watched/read about Arjuna and Lasun</li>
+            <li>You are ready to get rid of this silent killer (Hypertension)</li>
+            <li>You are financially ready. We incur costs on adverts and delivery (which is free for you). We want as many
+              Nigerians to benefit from this breakthrough product.</li>
+            <li>You pick unknown numbers. Our representative will call to confirm your order and schedule a delivery
+              date. Please pick up and respond.</li>
+              <li>You don’t pick unknown numbers As Our representative Will Call to confirm your order and schedule a delivery date So We Need you to pick up and respond.</li>
         </ul>
-        <h2>You don’t pick unknown numbers As Our representative Will Call to confirm your order and schedule a delivery date So We Need you to pick up and respond.</h2>
+
+
+    <p><b><u>NOTE;THIS PRODUCT IS COMPLETELY PAYMENT ON DELIVERY YOU PAY WHEN OUR DELIVERY AGENT DELIVERS THIS PRODUCT TO YOUR DOOR STEP SO YOUR MONEY IS 100% SAFE</p></b></u></center>
+    <h2 id="ry">If You Are Ready To Regain Your Health And Be Absolutely FREE From Hypertension, Fill in the required information on The Form Below To Immediately <b>PLACE </b>Your <b>ORDER</b> Now.<br><br> <u>
+    Please ensure that all required information is filled out accurately to facilitate the processing of your order.</u>
+    </h2>
+
+
         <img src="./asset/1.png" alt="Another Product Image" id="rm">
         <h1 id="ud">"Then Fill The Form Below To Immediately PLACE Your ORDER Now!"</h1>
     </div>
